--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.3",
+    "@nestjs/apollo": "12.0.11",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "12.0.11",
     "@nestjs/platform-express": "^10.0.0",
+    "apollo-server-express": "^3.13.0",
     "axios": "^1.8.4",
-    "reflect-metadata": "^0.2.0",
+    "express": "^4.21.2",
+    "graphql": "^16.10.0",
+    "reflect-metadata": "0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
