--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "@nestjs/graphql": "12.0.11",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^6.4.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.8.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
+    "helmet": "^8.1.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "^7.8.1"
   },
