--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@nestjs/throttler": "^6.4.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.8.4",
+    "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "helmet": "^8.1.0",
+    "playwright": "^1.51.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -45,6 +47,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cheerio": "^0.22.35",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
