--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
+    "postinstall": "npx playwright install",
     "build": "nest build",
     "build:webpack": "nest build --builder=webpack",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
